[gd_scene load_steps=3 format=2]

[ext_resource path="res://themes/MainMenu.tres" type="Theme" id=1]
[ext_resource path="res://lobby.gd" type="Script" id=2]

[node name="lobby" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 6
size_flags_vertical = 6
theme = ExtResource( 1 )
alignment = 1
script = ExtResource( 2 )

[node name="connect" type="VBoxContainer" parent="."]
margin_left = 412.0
margin_top = 228.0
margin_right = 612.0
margin_bottom = 472.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1

[node name="name_label" type="Label" parent="connect"]
margin_right = 200.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Name:"

[node name="name" type="LineEdit" parent="connect"]
margin_top = 32.0
margin_right = 200.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Player1"
align = 1
caret_blink = true

[node name="ip_label" type="Label" parent="connect"]
margin_top = 64.0
margin_right = 200.0
margin_bottom = 92.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "IP:"

[node name="ip" type="LineEdit" parent="connect"]
margin_top = 96.0
margin_right = 200.0
margin_bottom = 124.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "127.0.0.1"
align = 1
caret_blink = true

[node name="host" type="Button" parent="connect"]
margin_top = 128.0
margin_right = 200.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Host"

[node name="join" type="Button" parent="connect"]
margin_top = 150.0
margin_right = 200.0
margin_bottom = 168.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Join"

[node name="error_label" type="Label" parent="connect"]
margin_top = 172.0
margin_right = 200.0
margin_bottom = 200.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1
autowrap = true

[node name="Button" type="Button" parent="connect"]
margin_top = 204.0
margin_right = 200.0
margin_bottom = 222.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "SinglePlayer"

[node name="Button2" type="Button" parent="connect"]
margin_top = 226.0
margin_right = 200.0
margin_bottom = 244.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Another Name"

[node name="PlayersList" type="VBoxContainer" parent="."]
editor/display_folded = true
visible = false
margin_left = 705.0
margin_top = 328.0
margin_right = 833.0
margin_bottom = 372.0
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1

[node name="label" type="Label" parent="PlayersList"]
margin_right = 128.0
margin_bottom = 18.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Awaiting Players..."

[node name="start" type="Button" parent="PlayersList"]
margin_top = 22.0
margin_right = 128.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "START!"

[node name="list" type="ItemList" parent="PlayersList"]
margin_top = 44.0
margin_right = 128.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="error" type="AcceptDialog" parent="."]
margin_left = 437.0
margin_top = 543.0
margin_right = 587.0
margin_bottom = 643.0
rect_min_size = Vector2( 150, 100 )
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="WaitServer" type="VBoxContainer" parent="."]
editor/display_folded = true
visible = false
margin_left = 669.0
margin_top = 330.0
margin_right = 869.0
margin_bottom = 369.0
rect_min_size = Vector2( 200, 0 )
size_flags_horizontal = 6
size_flags_vertical = 6
alignment = 1

[node name="Label" type="Label" parent="WaitServer"]
margin_right = 200.0
margin_bottom = 39.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Message
"
align = 1
autowrap = true

[connection signal="pressed" from="connect/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="connect/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="connect/Button" to="." method="_on_Sinlgeplayer_pressed"]
[connection signal="pressed" from="connect/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="PlayersList/start" to="." method="_on_start_pressed"]
